# code-search

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_validation.py  seed_test_cases.py  test_cases_semantic.json  validate_dense.py  validate_hybrid.py
server/: config.py  main.py  state.py
server/embeddings/: jina.py  openai.py
server/indexer/: git_history.py  github_source.py  pipeline.py
server/parser/: base.py  compose.py  dockerfile.py  java.py  markdown.py  registry.py  typescript.py  xml_parser.py
server/prompts/: service.py  system.py
server/routes/: reindex.py
server/store/: commit_store.py  qdrant.py
server/tools/: admin.py  history.py  search.py
tests/: conftest.py  test_git_history.py  test_reindex_route.py
tests/fixtures/compose/: docker-compose.yml
tests/fixtures/css/: styles.css
tests/fixtures/dockerfile/: Dockerfile
tests/fixtures/go/: router.go
tests/fixtures/html/: page.html
tests/fixtures/java/: UserController.java
tests/fixtures/json/: package.json
tests/fixtures/markdown/: README.md
tests/fixtures/python/: api.py
tests/fixtures/typescript/: Counter.tsx
tests/fixtures/xml/: beans.xml  pom.xml
tests/parser/: test_compose.py  test_css_parser.py  test_dockerfile.py  test_go.py  test_html_parser.py  test_java.py  test_json_parser.py  test_markdown.py  test_python.py  test_registry.py  test_typescript.py  test_xml_parser.py
